<resources>
    <string name="app_name">Political Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_title">About Political Hangman</string>
    <string name="about_message">Thank you for playing! \nPolitical Hangman v1.0 \nCopyright \u00a9 2016 Tek-Genie LLC</string>
    <string name="about_feedback_button">Send Feedback</string>
    <string name="about_email_subject">Political Hangman v1.0 Feedback</string>
    <string name="about_email_message"></string>
    <string name="submit">Submit</string>
    <string name="new_game">New Game</string>
    <string name="close">Close</string>
    <string name="more_info">More Info</string>
    <string name="title_activity_hangman">Political Hangman</string>
    <string name="game_complete">Give Up!</string>
    <string name="labelGameName_placeholder">_ _</string>
    <string name="labelClue_placeholder">No Clue for This Person</string>
    <string name="labelTime_text">Time</string>
    <string name="countTime_text">0:00</string>
    <string name="gamesWon">Games Won: </string>
    <string name="gameTotal">Games Total: </string>
    <string name="lastGameTime">Last Game Time: </string>
    <string name="fastestTime">Fastest Time: </string>
    <string name="averageTime">Average Time: </string>
    <string name="slowestTime">Slowest Time: </string>
    <string name="title_activity_test">test</string>
    <string name="default0">0</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
