<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tek_genie.hangman.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gamesWon"
        android:id="@+id/labelGamesWon"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelGamesWonDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_toRightOf="@id/labelGamesWon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameTotal"
        android:id="@+id/labelGamesTotal"
        android:singleLine="true"
        android:layout_below="@+id/labelGamesWon"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelGamesTotalDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_below="@+id/labelGamesWonDisplay"
        android:layout_toRightOf="@id/labelGamesTotal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lastGameTime"
        android:id="@+id/labelLastGameTime"
        android:singleLine="true"
        android:layout_below="@+id/labelGamesTotal"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelLastGameTimeDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_below="@+id/labelGamesTotalDisplay"
        android:layout_toRightOf="@id/labelLastGameTime" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fastestTime"
        android:id="@+id/labelFastestTime"
        android:singleLine="true"
        android:layout_below="@+id/labelLastGameTime"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelFastestTimeDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_below="@+id/labelLastGameTimeDisplay"
        android:layout_toRightOf="@id/labelFastestTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/averageTime"
        android:id="@+id/labelAverageTime"
        android:singleLine="true"
        android:layout_below="@+id/labelFastestTime"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelAverageTimeDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_below="@+id/labelFastestTimeDisplay"
        android:layout_toRightOf="@id/labelFastestTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/slowestTime"
        android:id="@+id/labelSlowestTime"
        android:singleLine="true"
        android:layout_below="@+id/labelAverageTime"
        android:layout_alignParentLeft="true"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelSlowestTimeDisplay"
        android:text="@string/default0"
        android:singleLine="true"
        android:layout_below="@+id/labelAverageTimeDisplay"
        android:layout_toRightOf="@id/labelSlowestTime" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/buttonNewGameMain"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />







</RelativeLayout>
